--- a/src/global.css
+++ b/src/global.css
@@ -5,6 +5,9 @@
   outline: none;
   box-sizing: border-box;
 }
+.ht-hundred{
+  height: 100% !important;
+}
 .bg-primary{
   background: #EFF2F6 !important;
 }
